# Helix_Engine

./: .gitmodules  CMakeLists.txt  Helix.sln  README.md  premake5.lua
Helix/: Helix.vcxproj  Helix.vcxproj.filters
Helix/src/: Helix.h  hxpch.cpp  hxpch.h
Helix/src/Helix/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Helix/src/Helix/Core/: Timestep.h
Helix/src/Helix/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Helix/src/Helix/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Helix/src/Helix/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Helix/src/Helix/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Helix/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Helix/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: Sandbox.vcxproj  imgui.ini
Sandbox/src/: SandboxApp.cpp
